# libcros

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: crypto.yaml  key_value.yaml  libargs.yaml  logger.yaml  tlcl_examples.yaml
examples/: cmdline.rs  crypto.rs  key_value.rs  libargs.rs  logger.rs  sysinfo.rs  tlcl_clear.rs  tlcl_define_and_undefine.rs  tlcl_kernver.rs  tlcl_read.rs  tlcl_read_with_offset.rs  tlcl_resume.rs  tlcl_save_state.rs  tlcl_startup.rs  tlcl_write.rs  tlcl_write_with_offset.rs  ui.rs
reference/vpd/: BUILD.gn  OWNERS  README.md  cache.cc  cache.h  cache_file.cc  cache_file.h  cache_file_fuzzer.cc  cache_file_test.cc  cache_fuzzer.cc  cache_test.cc  decoder_fuzzer.cc  encoder.cc  encoder.h  encoder_test.cc  export.h  fake_fmap.cc  fake_fmap.h  fake_vpd.h  flashrom.cc  flashrom.h  flashrom_test.cc  integration_test.cc  libvpd.cc  raw_decoder_fuzzer.cc  sysfs.cc  sysfs.h  sysfs_test.cc  types.h  unblocked_terms.txt  vpd.cc  vpd.h  vpd_provider_interface.h
reference/vpd/include/lib/: lib_smbios.h
reference/vpd/lib/: vpd_container.c
reference/vpd/tests/: test_export.sh
reference/vpd/tmpfiles.d/: vpd.conf
reference/vpd/util/: dump_filtered_vpd.cc  file.cc  file.h  file_test.cc  scoped_umask.cc  scoped_umask.h  scoped_umask_test.cc  string.cc  string.h  string_test.cc  update_rw_vpd.cc  update_rw_vpd.h  update_rw_vpd_test.cc
scripts/: build_vtpm.sh  start_tpm1.sh  start_tpm2.sh
src/: cmdline.rs  crypto.rs  execute.rs  lib.rs  libargs.rs  logging.rs  structs.rs  sysinfo.rs  tlcl.rs
src/diskutils/: gpt.rs  mod.rs
src/gsc/: constants.rs  mod.rs
src/keyval/: erase.rs  get.rs  mod.rs  set.rs
src/sysinfo/: backend.rs  gsc.rs  mod.rs  rollback.rs  stubs.rs
src/tlcl/: backend.rs  bytes.rs  client.rs  constants.rs  exports.rs  marshal.rs  mod.rs  permissions.rs  structs.rs  unmarshal.rs  v1_2.rs  v2_0.rs
src/tlcl/commands/: mod.rs
src/tlcl/commands/stubs/: mod.rs
src/tlcl/commands/tpm12/: clear.rs  define.rs  define_space.rs  mod.rs  physical_presence.rs  read.rs  startup.rs  write.rs
src/tlcl/commands/tpm20/: clear.rs  define.rs  define_space.rs  mod.rs  physical_presence.rs  read.rs  startup.rs  write.rs
src/tlcl/stubs/: constants.rs  marshal.rs  mod.rs  unmarshal.rs
src/tlcl/tpm12/: constants.rs  marshal.rs  mod.rs  unmarshal.rs  utils.rs
src/tlcl/tpm20/: constants.rs  marshal.rs  mod.rs  types.rs  unmarshal.rs
src/ui/: constants.rs  header.rs  menu.rs  mod.rs  utils.rs
src/vpd/: flashrom.rs  mod.rs
