[package]
name = "libcros"
version = "0.5.0"
edition = "2024"
autoexamples = false
description = "A Rust library that provides easy-to-use functions for interacting with a Chrome device"
license = "GPL-3.0-only"
repository = "https://github.com/kxtzownsu/libcros"
keywords = ["chrome", "chromeos", "google", "chromium", "chromiumos"]
categories = ["hardware-support", "embedded"]
authors = ["kxtzownsu <kxtzownsu@gmail.com>"]

[dependencies]
clearscreen = { version = "4.0.6", optional = true }
libc = { version = "0.2.184", optional = true }
regex = { version = "1.12.3", optional = true }
unicode-width = { version = "0.2.2", optional = true }
flashrom = { git = "https://github.com/flashrom/flashrom", branch = "main", subdirectory = "bindings/rust", optional = true }
uuid = { version = "1.23.0", optional = true}

[features]
tpm2_0 = []
tpm1_2 = []
tlcl = []
example = []
ui = ["dep:clearscreen", "dep:libc", "dep:regex", "dep:unicode-width"]
flashrom = ["dep:flashrom"]
diskutils = ["dep:uuid"]

[[example]]
name = "logger"
required-features = ["example"]

[[example]]
name = "libargs"
required-features = ["example"]

[[example]]
name = "key_value"
required-features = ["example"]

[[example]]
name = "crypto"
required-features = ["example"]

[[example]]
name = "ui"
required-features = ["example", "ui"]

[[example]]
name = "sysinfo"
required-features = ["example", "tlcl"]


[[example]]
name = "tlcl_clear"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_define_and_undefine"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_kernver"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_read"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_read_with_offset"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_resume"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_save_state"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_startup"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_write"
required-features = ["example", "tlcl"]

[[example]]
name = "tlcl_write_with_offset"
required-features = ["example", "tlcl"]
