# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

group("all") {
  deps = [
    ":dump_filtered_vpd",
    ":install_libvpd_headers",
    ":install_tmpfiles_conf",
    ":libvpd",
    ":update_rw_vpd",
    ":vpd",
  ]
  if (!use.cros_host) {
    deps += [ ":install_sbin_scripts" ]
  }
  if (!use.cros_host && !use.systemd) {
    deps += [ ":install_init" ]
  }
  if (use.test) {
    deps += [
      ":vpd_c_test",
      ":vpd_test",
    ]
  }
  if (use.fuzzer) {
    deps += [
      ":vpd_cache_file_fuzzer",
      ":vpd_cache_fuzzer",
      ":vpd_decoder_fuzzer",
      ":vpd_raw_decoder_fuzzer",
    ]
  }
}

executable("dump_filtered_vpd") {
  sources = [ "util/dump_filtered_vpd.cc" ]
  configs += [ ":target_defaults" ]
  install_path = "sbin"
  deps = [ ":libvpd" ]
}

executable("update_rw_vpd") {
  sources = [ "util/update_rw_vpd.cc" ]
  configs += [ ":target_defaults" ]
  install_path = "sbin"
  deps = [ ":libvpd" ]
}

vpd_c_sources = [
  "lib/checksum.c",
  "lib/flashrom.c",
  "lib/lib_smbios.c",
  "lib/lib_vpd.c",
  "lib/vpd_container.c",
  "lib/vpd_decode.c",
  "lib/vpd_encode.c",
]

executable("vpd") {
  sources = [ "vpd.cc" ] + vpd_c_sources
  configs += [
    ":target_defaults",
    ":vpd_c",
  ]
  include_dirs = [
    "include",
    "include/lib",
  ]
  install_path = "sbin"
  deps = [ ":libvpd" ]
}

config("vpd_c") {
  cflags = [
    "-Wno-implicit-fallthrough",
    "-DVPD_VERSION=\" : version : " + getenv("PVR") + "\"",
  ]
}

install_config("install_init") {
  sources = [ "init/vpd-icc.conf" ]
  install_path = "upstart"
}

install_config("install_sbin_scripts") {
  sources = [
    "util/vpd_get_value",
    "util/vpd_icc",
  ]
  install_path = "sbin"
  type = "executable"
}

install_config("install_libvpd_headers") {
  sources = [
    "export.h",
    "fake_vpd.h",
    "types.h",
    "vpd.h",
    "vpd_provider_interface.h",
  ]
  install_path = "/usr/include/vpd"
}

install_config("install_tmpfiles_conf") {
  sources = [ "tmpfiles.d/vpd.conf" ]
  install_path = "tmpfilesd"
}

default_pkg_deps = [
  "absl",
  "flashrom",
  "fmap",
  "uuid",
]

pkg_config("target_defaults") {
  pkg_deps = default_pkg_deps
}

shared_library("libvpd") {
  sources = [
    "cache.cc",
    "cache_file.cc",
    "encoder.cc",
    "flashrom.cc",
    "lib/checksum.c",
    "libvpd.cc",
    "sysfs.cc",
    "util/file.cc",
    "util/scoped_umask.cc",
    "util/string.cc",
  ]
  configs += [ ":target_defaults" ]
  include_dirs = [ "include" ]
  install_path = "lib"
}

if (use.test) {
  pkg_config("test_config") {
    pkg_deps = [
      "libbrillo",
      "libchrome",
      "libchrome-test",
    ]
  }

  executable("vpd_c_test") {
    sources = [ "lib/lib_vpd_test.c" ] + vpd_c_sources
    configs += [
      ":target_defaults",
      ":vpd_c",
    ]
    include_dirs = [
      "include",
      "include/lib",
    ]
    run_test = true
    deps = [ "//common-mk/testrunner" ]
  }

  executable("vpd_test") {
    sources = [
      "cache_file_test.cc",
      "cache_test.cc",
      "encoder_test.cc",
      "fake_fmap.cc",
      "flashrom_test.cc",
      "integration_test.cc",
      "sysfs_test.cc",
      "util/file_test.cc",
      "util/scoped_umask_test.cc",
      "util/string_test.cc",
      "util/update_rw_vpd_test.cc",
    ]
    configs += [
      "//common-mk:test",
      ":target_defaults",
      ":test_config",
    ]
    include_dirs = [ "include" ]
    run_test = true
    deps = [
      ":extract_gvpdinfo_tbz",
      ":libvpd",
      "//common-mk/testrunner",
    ]
  }

  # Old test cases in a tarball.
  action("extract_gvpdinfo_tbz") {
    source = "tests/gVpdInfo.tbz"
    inputs = [ source ]
    outputs = [
      "${root_out_dir}/broken.vpd",
      "${root_out_dir}/empty.vpd",
    ]
    script = "/bin/tar"
    args = [
      "xf",
      rebase_path(source),
    ]
  }
}

if (use.fuzzer) {
  pkg_config("fuzzer_config") {
    pkg_deps = [
      "libbrillo",
      "libchrome",
    ]
  }

  executable("vpd_cache_file_fuzzer") {
    sources = [ "cache_file_fuzzer.cc" ]
    configs += [
      "//common-mk/common_fuzzer",
      ":target_defaults",
      ":fuzzer_config",
    ]
    include_dirs = [ "include" ]
    deps = [ ":libvpd" ]
  }
  executable("vpd_cache_fuzzer") {
    sources = [
      "cache_fuzzer.cc",
      "fake_fmap.cc",
    ]
    configs += [
      "//common-mk/common_fuzzer",
      ":target_defaults",
      ":fuzzer_config",
    ]
    include_dirs = [ "include" ]
    deps = [ ":libvpd" ]
  }
  executable("vpd_decoder_fuzzer") {
    sources = [ "decoder_fuzzer.cc" ]
    configs += [
      "//common-mk/common_fuzzer",
      ":target_defaults",
      ":fuzzer_config",
    ]
    include_dirs = [ "include" ]
    deps = [ ":libvpd" ]
  }
  executable("vpd_raw_decoder_fuzzer") {
    sources = [ "raw_decoder_fuzzer.cc" ]
    configs += [
      "//common-mk/common_fuzzer",
      ":target_defaults",
      ":fuzzer_config",
    ]
    include_dirs = [ "include" ]
    deps = [ ":libvpd" ]
  }
}
